[gd_scene load_steps=16 format=3 uid="uid://qiq1iwc2w2ut"]

[ext_resource type="Script" uid="uid://2nu4rk6ipntq" path="res://Script/UI/main_menu.gd" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://bej5avswu6hy8" path="res://Assets/Fonts/PixelOperator8.ttf" id="2_48xlc"]
[ext_resource type="FontFile" uid="uid://bviwfb081ihrt" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="3_1ehe0"]
[ext_resource type="Texture2D" uid="uid://bm3fjir5c7q0v" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0009_2.png" id="3_n45e2"]
[ext_resource type="Texture2D" uid="uid://4bwg0yu05qak" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0011_0.png" id="4_ce3w2"]
[ext_resource type="Texture2D" uid="uid://40yxool4vs2j" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0008_3.png" id="4_opfnp"]
[ext_resource type="Texture2D" uid="uid://lbdm8fgd03mj" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0006_4.png" id="5_t1dhk"]
[ext_resource type="Texture2D" uid="uid://injdm11r35ki" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0007_Lights.png" id="5_vtepg"]
[ext_resource type="Texture2D" uid="uid://8v5a182yg1ic" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0005_5.png" id="6_5egv6"]
[ext_resource type="Texture2D" uid="uid://cnvs6mli074fg" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0003_6.png" id="7_vtepg"]
[ext_resource type="Texture2D" uid="uid://08wuqmic44tk" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0002_7.png" id="8_8dnnj"]
[ext_resource type="Texture2D" uid="uid://ccei1to71qae1" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0004_Lights.png" id="8_m3bi6"]
[ext_resource type="Texture2D" uid="uid://csppc00pwxpi8" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0001_8.png" id="9_m3bi6"]
[ext_resource type="Texture2D" uid="uid://dufttifkvu427" path="res://Assets/Background/Free Pixel Art Forest/Background layers/Layer_0000_9.png" id="10_wyh8j"]
[ext_resource type="Theme" uid="uid://cxruiif20pkg7" path="res://Themes/MainButtons.tres" id="14_8dnnj"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_28flt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00110" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("4_ce3w2")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00092" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("3_n45e2")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00083" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("4_opfnp")
centered = false

[node name="ParallaxLayer10" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer0007Lights" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer10"]
texture = ExtResource("5_vtepg")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00064" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("5_t1dhk")
centered = false

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00055" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource("6_5egv6")
centered = false

[node name="ParallaxLayer11" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer0004Lights" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer11"]
texture = ExtResource("8_m3bi6")
centered = false

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00036" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
texture = ExtResource("7_vtepg")
centered = false

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00027" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer7"]
texture = ExtResource("8_8dnnj")
centered = false

[node name="ParallaxLayer8" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00018" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer8"]
texture = ExtResource("9_m3bi6")
centered = false

[node name="ParallaxLayer9" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-99, -400)

[node name="Layer00009" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer9"]
texture = ExtResource("10_wyh8j")
centered = false

[node name="Title" type="Label" parent="."]
offset_right = 640.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 93
text = "CHD Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 166.667
offset_right = 640.0
offset_bottom = 344.667

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("14_8dnnj")
theme_override_constants/separation = 16

[node name="play" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 21
text = "PLAY"

[node name="settings" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 21
text = "SETTINGS"

[node name="credits" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 21
text = "CREDITS"

[node name="quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 21
text = "QUIT"

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6

[node name="back" type="Button" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(117.667, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 21
text = "BACK"

[node name="fullscreen" type="CheckBox" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 18
text = "FULLSCREEN"

[node name="mainvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/mainvolslider"]
custom_minimum_size = Vector2(200, 17)
layout_mode = 0
offset_top = -5.0
offset_right = 200.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 13
text = "MAIN VOLUME"
horizontal_alignment = 1

[node name="musicvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/musicvolslider"]
custom_minimum_size = Vector2(200, 17)
layout_mode = 0
offset_top = -5.0
offset_right = 200.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 13
text = "MUSIC VOLUME"
horizontal_alignment = 1

[node name="sfxvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/sfxvolslider"]
custom_minimum_size = Vector2(200, 17)
layout_mode = 0
offset_top = -5.0
offset_right = 200.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 13
text = "SFX VOLUME"
horizontal_alignment = 1

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CenterContainer/CreditsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_font_sizes/font_size = 40
text = "ZM&YYX"
horizontal_alignment = 1

[node name="back" type="Button" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(111, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 21
text = "BACK"

[connection signal="pressed" from="CenterContainer/MainButtons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsMenu/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="CenterContainer/SettingsMenu/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/mainvolslider" to="." method="_on_mainvolslider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/musicvolslider" to="." method="_on_musicvolslider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/sfxvolslider" to="." method="_on_sfxvolslider_2_value_changed"]
[connection signal="pressed" from="CenterContainer/CreditsMenu/back" to="." method="_on_back_pressed"]
